Implementar Actividad 5: analisis sintactico